--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node .",
+    "dev": "node -r dotenv/config .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
