--- a/package.json
+++ b/package.json
@@ -6,16 +6,23 @@
   "main": "index.js",
   "scripts": {
     "start": "node .",
-    "dev": "node -r dotenv/config .",
+    "dev": "dev=true nodemon -r dotenv/config .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "dotenv": "^8.2.0"
+    "@types/socket.io": "^2.1.13",
+    "dotenv": "^8.2.0",
+    "nodemon": "^2.0.7"
   },
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "socket.io": "^4.0.1"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.3",
+    "utf-8-validate": "^5.0.4"
   }
 }
