--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
   "name": "subdomain-bash",
   "private": true,
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node .",
+    "start:dev": "dev=true ts-node-dev -r dotenv/config src/server.ts",
     "dev": "dev=true nodemon -r dotenv/config .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Anand K.",
   "license": "ISC",
+  "engines": {
+    "npm": ">=8.1.0",
+    "node": ">=16.13.0"
+  },
   "devDependencies": {
     "@types/socket.io": "^2.1.13",
     "dotenv": "^8.2.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.5.4"
   },
   "dependencies": {
     "axios": "^0.21.1",
