--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node .",
     "dev": "dev=true ts-node-dev -r dotenv/config src/index.ts",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "author": "Anand K.",
   "license": "ISC",
@@ -17,9 +18,12 @@
     "node": ">=16.13.0"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.0",
     "@types/socket.io": "^2.1.13",
     "dotenv": "^8.2.0",
+    "jest": "^27.4.7",
     "nodemon": "^2.0.7",
+    "ts-jest": "^27.1.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
   },
